added remove functionality to card and styled it

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "FaceCook",
-  "name": "FaceCook: You Favorite Dealer",
+  "name": "FaceCook | Your Trusty Dealer",
   "icons": [
     {
       "src": "favicon.ico",
